--- a/src/LoginForm.form
+++ b/src/LoginForm.form
@@ -7,6 +7,7 @@
     </constraints>
     <properties>
       <background color="-986119"/>
+      <enabled value="true"/>
       <foreground color="-986119"/>
       <maximumSize width="335" height="250"/>
       <minimumSize width="335" height="250"/>
