--- a/src/DashboardForm.form
+++ b/src/DashboardForm.form
@@ -57,7 +57,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <scrollpane id="62a00">
+                  <scrollpane id="62a00" binding="addGradesScrollPane">
                     <constraints>
                       <grid row="0" column="1" row-span="3" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -65,15 +65,7 @@
                       <enabled value="true"/>
                     </properties>
                     <border type="none"/>
-                    <children>
-                      <component id="37687" class="javax.swing.JTable" binding="studentsTable">
-                        <constraints/>
-                        <properties>
-                          <editingRow value="-1"/>
-                          <enabled value="true"/>
-                        </properties>
-                      </component>
-                    </children>
+                    <children/>
                   </scrollpane>
                   <component id="822e2" class="javax.swing.JButton" binding="confirmAddGradesButton">
                     <constraints>
@@ -100,7 +92,7 @@
                           <text value="Przedmiot"/>
                         </properties>
                       </component>
-                      <component id="27747" class="javax.swing.JComboBox" binding="subjectTypeComboBox">
+                      <component id="27747" class="javax.swing.JComboBox" binding="subjectsComboBox">
                         <constraints>
                           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
