--- a/src/LoginForm.form
+++ b/src/LoginForm.form
@@ -1,92 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="LoginForm">
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+    <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="500"/>
+      <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties>
-      <background color="-986119"/>
-      <enabled value="true"/>
-      <foreground color="-986119"/>
-      <maximumSize width="335" height="250"/>
-      <minimumSize width="335" height="250"/>
-      <preferredSize width="335" height="250"/>
-    </properties>
+    <properties/>
     <border type="none"/>
     <children>
-      <component id="db5c6" class="javax.swing.JButton" binding="loginButton">
+      <component id="971e8" class="javax.swing.JTextField" binding="emailField">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="-1" height="40"/>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties>
-          <background color="-10447620"/>
-          <borderPainted value="false"/>
-          <focusPainted value="false"/>
-          <font name="Segoe UI" size="14"/>
-          <foreground color="-1"/>
-          <rolloverEnabled value="true"/>
-          <text value="ZALOGUJ"/>
-        </properties>
+        <properties/>
       </component>
-      <component id="5019b" class="javax.swing.JTextField" binding="emailField">
+      <component id="d42bc" class="javax.swing.JPasswordField" binding="passwordField">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="10" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="280" height="40"/>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties>
-          <background color="-3355444"/>
-          <font name="Segoe UI" size="14"/>
-          <foreground color="-10262164"/>
-          <requestFocusEnabled value="true"/>
-          <text value=""/>
-        </properties>
+        <properties/>
       </component>
-      <component id="5ef79" class="javax.swing.JPasswordField" binding="passwordField">
+      <component id="ce50d" class="javax.swing.JButton" binding="loginButton">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="280" height="40"/>
-          </grid>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-3355444"/>
-          <font name="Segoe UI" size="14"/>
-          <foreground color="-10262164"/>
-          <text value=""/>
+          <text value="Zaloguj się"/>
         </properties>
       </component>
-      <hspacer id="fa629">
-        <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
-      <hspacer id="f005b">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
-      <component id="3a270" class="javax.swing.JLabel">
+      <component id="6e646" class="javax.swing.JLabel">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <font name="Segoe UI" size="18" style="1"/>
           <text value="Elektroniczny system oceniania"/>
         </properties>
       </component>
-      <component id="22168" class="javax.swing.JLabel">
+      <component id="3bd2" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <font name="Segoe UI" size="14"/>
-          <foreground color="-10447620"/>
           <text value="Logowanie"/>
         </properties>
       </component>
+      <hspacer id="18c8c">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <hspacer id="5697f">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
     </children>
   </grid>
 </form>
