--- a/src/DashboardForm.form
+++ b/src/DashboardForm.form
@@ -25,6 +25,7 @@
             <properties>
               <enabled value="true"/>
               <name value=""/>
+              <tabLayoutPolicy value="0"/>
               <tabPlacement value="2"/>
             </properties>
             <border type="none"/>
@@ -69,7 +70,7 @@
                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <text value="Przedmiot"/>
+                          <text value="Przedmiot:"/>
                         </properties>
                       </component>
                       <component id="27747" class="javax.swing.JComboBox" binding="subjectsComboBox">
@@ -95,7 +96,7 @@
                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <text value="Typ oceny"/>
+                          <text value="Typ oceny:"/>
                         </properties>
                       </component>
                       <component id="c47d1" class="javax.swing.JComboBox" binding="gradesTypeComboBox">
@@ -163,6 +164,71 @@
                       </component>
                     </children>
                   </scrollpane>
+                </children>
+              </grid>
+              <grid id="42e0a" binding="gradesReportPanel" layout-manager="GridLayoutManager" row-count="4" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="10" bottom="0" right="10"/>
+                <constraints>
+                  <tabbedpane title="Raport ocen"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <scrollpane id="f093e">
+                    <constraints>
+                      <grid row="0" column="3" row-span="4" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <component id="5bfca" class="javax.swing.JTable" binding="reportTable">
+                        <constraints/>
+                        <properties>
+                          <enabled value="false"/>
+                        </properties>
+                      </component>
+                    </children>
+                  </scrollpane>
+                  <component id="9ac69" class="javax.swing.JLabel">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Imię:"/>
+                    </properties>
+                  </component>
+                  <component id="89a82" class="javax.swing.JLabel">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Nazwisko:"/>
+                    </properties>
+                  </component>
+                  <component id="9b022" class="javax.swing.JButton" binding="reportButton">
+                    <constraints>
+                      <grid row="3" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Wyszukaj oceny"/>
+                    </properties>
+                  </component>
+                  <component id="18282" class="javax.swing.JTextField" binding="reportNameField">
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="6" fill="0" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties/>
+                  </component>
+                  <component id="1510d" class="javax.swing.JTextField" binding="reportSurnameField">
+                    <constraints>
+                      <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="5" fill="0" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties/>
+                  </component>
                 </children>
               </grid>
             </children>
